risc0/zirgen/dsl/test/repro/bogus_constructor_name.zir
// RUN: not zirgen --emit=zhlt %s 2>&1 | FileCheck %s
// CHECK: error:

component Top() {
  x := Reg(1);
  y := R@g(x@1 + x);
}

